set multiple analytics

--- a/onetrip.html
+++ b/onetrip.html
@@ -80,7 +80,7 @@
       #legend {
         font-family: Arial, sans-serif;
         background: #fff;
-        padding: 10px;
+        padding: 20px;
         margin: 10px;
         border-radius: 5px;
         box-shadow: 0 1px 3px 0 rgba(60, 64, 67, 0.302),
@@ -139,6 +139,8 @@
     <a href="" class="btn gta btn-light">GTA</a>
     <script src="../../src/javascript/jquery-3.3.1.min.js"></script>
     <script src="../../src/javascript/maps.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <script src="../../src/javascript/flame.js"></script>
     <!-- <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
       async
